# asset-tracker

./: .gitignore  BUILD  BUILD.bazel  MODULE.bazel  WORKSPACE  go.mod  go.sum
.bin/: buildifier.sh
.tmp/: go_webp_encoder_build.modified.bzl  go_webp_encoder_build.original
bazel/: external_deps.bzl  go_deps.bzl
bazel/com_github_kagami_go_avif/: build.patch
bazel/com_github_kolesa_team_go_webp/: build.patch
bazel/libaom/: BUILD.bazel
bazel/libwebp/: BUILD.bazel
pkg/alm/: BUILD  create_asset.sh  main.go
pkg/alm/cmd/: BUILD  render.go  save_asset.go
pkg/alm/label/: BUILD  label.go  raster_label.go
pkg/asset_manager/: BUILD.bazel  base.go  db_csv.go  ddb.go  ddb_asset_manager.go  paginated_data.go
pkg/asset_service/: BUILD.bazel  main.go  server.go
pkg/core/asset/: BUILD  asset.go  id.go
pkg/label/renderer/: BUILD.bazel  barcode.go  dimensions.go  font_family.go  raster.go  renderer.go
pkg/pagination/: BUILD.bazel  paginated_data.go
pkg/pagination/next_token/: BUILD.bazel  encryption_engine.go  encryption_engine_test.go  encryption_key_source.go  env_key_source.go  env_key_source_test.go  next_token.go
proto/: BUILD.bazel  asset_common.proto  asset_service.proto  label_service.proto
services/asset_service/: BUILD.bazel  main.go  server.go
services/label_service/: BUILD.bazel  main.go
services/label_service/cmd/: BUILD.bazel  root.go
services/label_service/server/: BUILD.bazel  server.go
src/alm/: BUILD  asset.go  main.go
src/alm/asset/: BUILD  id.go
src/alm/cmd/: BUILD  render.go  root.go  save_asset.go
src/alm/label/: BUILD  label.go  raster_label.go  utils.go  utils_test.go
src/asset_manager/: BUILD.bazel  base.go  db_csv.go  ddb_asset_manager.go
src/asset_service/: BUILD.bazel  main.go  server.go
src/core/asset/: BUILD  asset.go  id.go
src/proto/: BUILD.bazel  asset_common.proto  asset_service.proto
