load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@bazel_gazelle//:def.bzl", "gazelle")

BUILDIFIER_EXCLUDE_PATTERNS = [
    "./.git/*",
    "./.idea/*",
]

buildifier(
    name = "buildifier.check",
    exclude_patterns = BUILDIFIER_EXCLUDE_PATTERNS,
    lint_mode = "warn",
    mode = "diff",
)

buildifier(
    name = "buildifier",
    exclude_patterns = BUILDIFIER_EXCLUDE_PATTERNS,
    mode = "fix",
)

gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=bazel/go_deps.bzl%go_deps",
        "-prune",
    ],
    command = "update-repos",
)
