load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "asset_common_proto",
    srcs = ["asset_common.proto"],
)

proto_library(
    name = "asset_service_proto",
    srcs = ["asset_service.proto"],
    deps = [":asset_common_proto"],
)

go_proto_library(
    name = "asset_common_go_proto",
    importpath = "asset-tracker/proto/asset_common",
    protos = [":asset_common_proto"],
)

go_proto_library(
    name = "asset_service_go_proto",
    compilers = ["@rules_go//proto:go_grpc"],
    importpath = "asset-tracker/proto/asset_service",
    protos = [":asset_service_proto"],
    deps = [":asset_common_go_proto"],
)
