filegroup(
    name = "srcs",
    srcs = glob(
        ["**/*"],
        # https://github.com/bazelbuild/rules_foreign_cc/issues/1034#issuecomment-2009876928
        exclude = ["bazel*/**"],
    ),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "csrcs",
    srcs = glob(["**/*.c"]),
)

filegroup(
    name = "chdrs",
    srcs = glob(["src/**/*.h"]),
)

cc_library(
    name = "libwebp_raw",
    srcs = [":srcs"],
    hdrs = [":chdrs"],
    copts = [
        "-Wno-int-conversion",
    ],
    includes = [
        ".",
        "src",
    ],
    linkopts = ["-lm"],
)
