load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "asset_manager",
    srcs = [
        "base.go",
        "db_csv.go",
        "ddb.go",
    ],
    importpath = "asset-tracker/pkg/asset_manager",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/core/asset",
        "//pkg/pagination",
        "//pkg/pagination/next_token",
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2_feature_dynamodb_attributevalue//:attributevalue",
        "@com_github_aws_aws_sdk_go_v2_service_dynamodb//:dynamodb",
        "@com_github_aws_aws_sdk_go_v2_service_dynamodb//types",
        "@com_github_vmihailenco_msgpack_v5//:msgpack",
        "@org_uber_go_zap//:zap",
    ],
)
